2005-04-23  John ffitch  <jpff@codemist.co.uk>

	* SConstruct (guiProgramEnvironment): Need dl and pthreads even
	without FLTK

2005-04-14  Michael Gogins <gogins@pipeline.com>
	* Added (very) basic Java GUI front end for Csound.
	It is the main class in CsoundVST.jar. To be extended.
	The purpose of this work is to embed Csound5 in Kandid,
	an interactive graphics program for evolving pictures, and
	adapt Kandid for evolving pieces.

2005-04-18	Istvan Varga	<istvan@csounds.com>
	* Top/utility.c, H/cs_util.h:
	  new files for dynamically loading utilities
	* cvanal.c, dnoise.c, hetro.c, lpanal.c, pvanal.c, pvlook.c, sndinfo.c:
	  moved from Top/ to util/
	  utilities converted to plugin libraries (not done yet for hetro,
	  lpanal, and pvlook; also pvanal is limited to old format for now)
	* H/pvoc.h, OOps/pvoc.c:
	  moved functions only used by pvanal to pvanal.c
	* H/prototyp.h:
	  removed prototypes for utilities
	* Engine/oload.c, H/csoundCore.h, Top/argdecode.c:
	  ENVIRON: API functions for adding and running utilities
	  changed command line parser for new utility API

2005-04-16  John ffitch  <jpff@codemist.co.uk>

	* InOut/libsnd.c (sfopenin): Changed in and out channel mismatch
	to a warning.  Trest with care!

2005-04-14  Michael Gogins <gogins@pipeline.com>
	* Changed CsoundVST to print log messages to stderr (used to be
	stdout) by default.
	* Added option to CsoundVST to automatically open the output
	soundfile for editing or listening at end of performance.
	* Upgraded Windows installer to set OPCODEDIR, RAWWAVE_PATH,
	PYTHONPATH, and PATH environment variables
	(uninstall does not work for PYTHONPATH).

2005-04-12  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/wave-terrain.c (wtPerf): Improved phase accumulation problem

2005-04-10  Michael Gogins <gogins@pipeline.com>
	* Updated the STK opcodes to take from 0 to 4 optional
	krate controller-value pairs.

2005-04-10  John ff  <jpff@codemist.co.uk>

	* OOps/ugens2.c (itabl3): Missing return
